...
        "2026-07-17" to "제헌절",
        "2026-08-15" to "광복절",
        "2026-08-17" to "대체공휴일",
        "2026-09-24" to "추석 연휴",
        "2026-09-25" to "추석",
        "2026-09-26" to "추석 연휴",
        "2026-10-03" to "개천절",
        "2026-10-05" to "대체공휴일",
        "2026-10-09" to "한글날",
        "2026-12-25" to "기독탄신일"
    )

    private val holidays2027 = mapOf(
...
